src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>EIC Training Opportunities</fullName>
        <description>EIC Training Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed%3A No Interest</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>WIN Sales Process</fullName>
        <description>The WIN Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won %2F Complete</fullName>
        </values>
        <values>
            <fullName>Closed%3A No Interest</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Client_Organization_For_Reseller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The end user organization or client if the opportunity is a reseller based project.</inlineHelpText>
        <label>Client Organization (For Reseller)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>CASE(MONTH(CloseDate), 1, &quot;001&quot;, 2, &quot;002&quot;, 3, &quot;003&quot;,  4, &quot;004&quot;,  5, &quot;005&quot;,  6, &quot;006&quot;, 7, &quot;007&quot;, 8, &quot;008&quot;, 9, &quot;009&quot;, 10, &quot;010&quot;, 11, &quot;011&quot;, 12, &quot;012&quot;, &quot;None&quot;)&amp;TEXT(YEAR(CloseDate))</formula>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Project_Number__c</fullName>
        <description>The  PO or Project Number provided by the client for invoicing purposes.</description>
        <inlineHelpText>The PO or Project Number provided by the client for invoicing purposes.</inlineHelpText>
        <label>Customer PO / Project Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Previous_Month__c</fullName>
        <formula>DATE(YEAR( Start_Date_of_Previous_Month__c ),MONTH(Start_Date_of_Previous_Month__c ),CASE(MONTH(Start_Date_of_Previous_Month__c ),1,31,2,IF(MOD(YEAR(Start_Date_of_Previous_Month__c ),4)=0,29,28),3,31,4,30,5,31,6,30,7,31,8,31,9,30,10,31,11,30,12,31,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date of Previous Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Epicor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Epicor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Prepay_AMOUNT__c</fullName>
        <formula>Prepaid_Hours_Balance__c * Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Prepay AMOUNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedNetRev__c</fullName>
        <formula>Net_Project_Revenue__c   *  Probability</formula>
        <inlineHelpText>Expected value (revenue * probability) after direct project subcontract costs.</inlineHelpText>
        <label>Expected Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hour_Owed_1_31__c</fullName>
        <formula>Hours_Planned__c - Hours_Complete_1_31__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour Owed 1/31</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Complete_1_31__c</fullName>
        <label>Hours Complete 1/31</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Invoiced__c</fullName>
        <label>Hours Invoiced</label>
        <summarizedField>Invoice__c.Hours_Invoiced__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Included in other invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Paid__c</fullName>
        <label>Hours Paid</label>
        <summarizedField>Invoice__c.Hours_Invoiced__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Planned__c</fullName>
        <label>Hours Planned</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Status__c</fullName>
        <label>Hours Status</label>
        <picklist>
            <picklistValues>
                <fullName>Currently Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing by Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actively Seeking New Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Contract Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Hours Expent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line of Business</description>
        <inlineHelpText>Line of Business</inlineHelpText>
        <label>Line of Business</label>
        <referenceTo>Line_of_Business__c</referenceTo>
        <relationshipLabel>Opportunity</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Project_Revenue__c</fullName>
        <formula>Amount  -  Subcontracted_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Project Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Invoices__c</fullName>
        <description>The number of invoices associated with this opportunity.</description>
        <inlineHelpText>The number of invoices associated with this opportunity.</inlineHelpText>
        <label>Number of Invoices</label>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Invoices__c</fullName>
        <label>Open Invoices</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Sent, Partially Paid, Past Due, Ready to Process</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Code__c</fullName>
        <description>The Opportunity Code. A short hand notation for the Opportunity name.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Opportunity Code. A short hand notation for the Opportunity name.</inlineHelpText>
        <label>Opportunity Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce.com CRM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Epicor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AscentERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce.com NP Edition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <label>Practice Area</label>
        <picklist>
            <picklistValues>
                <fullName>E&amp;EI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED&amp;BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prepaid_Hours_Balance__c</fullName>
        <formula>Hours_Paid__c  - Total_Completed_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProbabilityN__c</fullName>
        <formula>Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProbabilityN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Date__c</fullName>
        <label>Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Actual__c</fullName>
        <formula>If(
Total_Completed_Hours__c &gt; 0,
Total_Paid__c/ Total_Completed_Hours__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount__c</fullName>
        <formula>Amount -  Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total SOW amount less what has been paid.</inlineHelpText>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDPM__c</fullName>
        <formula>Date(
Year(CloseDate) - IF(Month(CloseDate)=1,1,0),
Case(Month(CloseDate ),1,12,2,1,3,2,4,3,5,4,6,5,7,6,8,7,9,8,10,9,11,10,12,11,1),
1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDPM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_End_Date__c</fullName>
        <label>SOW End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Start_Date__c</fullName>
        <label>SOW Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Type__c</fullName>
        <label>SOW Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hours Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SafeId__c</fullName>
        <formula>CaseSafeId(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Conga__c</fullName>
        <formula>Text(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage (Conga)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Image_Conga__c</fullName>
        <label>Stage Image (Conga)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Image__c</fullName>
        <formula>CASE(
Text(StageName),
&quot;Closed Won&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
&quot;Closed Lost&quot;,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
&quot;Closed: No Interest&quot;,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Previous_Month__c</fullName>
        <label>Start Date of Previous Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Contract_Hours_Planned__c</fullName>
        <label>Sub Contract Hours Planned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Contract_Rate_To_Customer__c</fullName>
        <label>Sub Contract Rate To Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subcontracted_Value__c</fullName>
        <description>Portion of Project Revenue Subcontracted</description>
        <label>Subcontracted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Record_Matrix__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/00O30000008EPgf?pv0=&quot;&amp;SafeId__c,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Record Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Record_Summary__c</fullName>
        <formula>Hyperlink(&quot;https://na1.salesforce.com/00O30000008EbJA?pv0=&quot;&amp; Name &amp;&quot;&amp;pv1=&quot;&amp; Account.Name, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Record Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Invoiced__c</fullName>
        <formula>Amount - Total_Invoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Be Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Hours__c</fullName>
        <label>Total Completed Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Amount__c</fullName>
        <label>Total Invoiced Amount</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Included in other invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WIN_Net_Value__c</fullName>
        <formula>Amount - Subcontracted_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIN Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WIN_Stage__c</fullName>
        <label>WIN Stage</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Developing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weighted_Amount__c</fullName>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>Name &amp;  Text (Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WIN</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Epicor__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.WIN_Opportunity</value>
        </filters>
        <label>All WIN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>EIC_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.EIC_Training</value>
        </filters>
        <label>EIC Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I_T_Active</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Hours_Status__c</columns>
        <columns>Prepaid_Hours_Balance__c</columns>
        <columns>Total_Paid__c</columns>
        <columns>To_Be_Invoiced__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Opportunity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.WIN_Opportunity</value>
        </filters>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>I/T</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>I/T Active</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I_T_All</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Project_Lead__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Hours_Status__c</columns>
        <columns>Platform__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Stage_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>I/t</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.WIN_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed: No Interest</value>
        </filters>
        <label>I/T All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>I_T_Epicor</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>SOW_Start_Date__c</columns>
        <columns>SOW_End_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Is_Active__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>I/T</value>
        </filters>
        <filters>
            <field>Platform__c</field>
            <operation>equals</operation>
            <value>Epicor</value>
        </filters>
        <label>I/T Epicor</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>I_T_Prospecting</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>I/T</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospecting</value>
        </filters>
        <label>I/T Prospecting</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I_T_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>WIN_Stage__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Sent_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>Practice_Area__c</field>
            <operation>equals</operation>
            <value>I/t</value>
        </filters>
        <label>I/T Won</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>My Team Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>WIN_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.WIN_Opportunity</value>
        </filters>
        <label>WIN Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>EIC_Training</fullName>
        <active>true</active>
        <businessProcess>EIC Training Opportunities</businessProcess>
        <description>EIC Training Opportunities</description>
        <label>EIC Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>WIN_Opportunity</fullName>
        <active>true</active>
        <businessProcess>WIN Sales Process</businessProcess>
        <label>WIN Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>